[gd_scene load_steps=5 format=3 uid="uid://c2edam76cj4y2"]

[ext_resource type="PackedScene" uid="uid://dwjaha7wvr684" path="res://player.tscn" id="1_3e7nn"]
[ext_resource type="Script" path="res://survivors_game.gd" id="1_5rcd5"]
[ext_resource type="PackedScene" uid="uid://daxa5q1gnbut8" path="res://pine_tree.tscn" id="2_upwgn"]

[sub_resource type="Curve2D" id="Curve2D_nghlc"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -699, -466, 0, 0, 0, 0, 1420, -481, 0, 0, 0, 0, 1432, 898, 0, 0, 0, 0, 578, 898, 0, 0, 0, 0, -692, 901, 2.99661, -2.99661, -2.99661, 2.99661, -695, 901, 0, 0, 0, 0, -693, -463)
}
point_count = 7

[node name="Game" type="Node2D"]
y_sort_enabled = true
position = Vector2(614, 381)
script = ExtResource("1_5rcd5")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = -1
anchor_right = 0.505729
anchor_bottom = 0.305556
offset_left = -434.0
offset_top = -70.0
offset_right = 940.0
offset_bottom = 749.0
metadata/_edit_use_anchors_ = true

[node name="Player" parent="." instance=ExtResource("1_3e7nn")]
position = Vector2(-128, 250)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-399, -148)
curve = SubResource("Curve2D_nghlc")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-699, -466)
rotation = -0.00707869

[node name="PineTree" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(-363, 288)

[node name="PineTree2" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(96, 249)

[node name="PineTree3" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(9, 292)

[node name="PineTree4" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(-359, -156)

[node name="PineTree5" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(484, -175)

[node name="PineTree6" parent="." instance=ExtResource("2_upwgn")]
position = Vector2(365, 63)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.181
autostart = true

[node name="GameOverScreen" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOverScreen"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Label" type="Label" parent="GameOverScreen/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -11.5
offset_right = 104.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 140
text = "GAME OVER LOSER LOSER!!"

[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
